--- a/Micro.css
+++ b/Micro.css
@@ -9,6 +9,7 @@ body {
     font-family: 'poppins', sans-serif;
     background-color: #E5E5E5;
     box-sizing: border-box;
+    width: 100%;
 }
 
 .navbar-toggler:focus {
@@ -53,6 +54,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: end;
+    border-end-start-radius: 150px;
 }
 
 
@@ -79,11 +81,11 @@ body {
 .boxi {
     display: flex;
     flex-direction: row;
-    width: 85%;
+    width: 90%;
     justify-content: center;
     text-align: left;
     height: auto;
-    margin-top: 120px;
+    margin-top: 100px;
 }
 
 .bxs-circle {
@@ -124,6 +126,7 @@ body {
     padding: 12px;
     border-radius: 8px;
     background-color: #ffffff;
+    cursor: pointer;
 }
 
 .butns {
@@ -135,6 +138,7 @@ body {
     padding: 12px;
     transition: .4s ease-in-out;
     transform: scale(1.2);
+    cursor: pointer;
 }
 
 .butns:hover {
@@ -165,6 +169,7 @@ span {
 
 .yesDisplay {
     display: none;
+    width: 100%;
 }
 
 .box3{
@@ -210,14 +215,13 @@ span {
     justify-content: center;
     text-align: left;
     height: auto;
-    margin-top: 120px;
+    margin-top: 100px;
     gap: 10px;
-    border-start-end-radius: 150px;
-    padding: 30px;
+    padding: 20px;
 }
 
 .boxil2 {
-    border-start-end-radius: 150px;
+    border-start-end-radius: 180px;
 }
 
 
@@ -261,7 +265,16 @@ span {
     border-radius: 8px;
 }
 
-@media (max-width: 960px) {
+.wraps {
+    width: 100%;
+    margin-top: -65px;
+}
+
+.mobile {
+    width: 90%;
+}
+
+@media (max-width: 768px) {
     .offcanvas {
         background-color:  #4a5bf896;
         backdrop-filter: blur(5px);
@@ -285,6 +298,7 @@ span {
     .boxil {
         flex-wrap: wrap;
         padding: 0;
+        margin-top: 60px;
     }
 
     .cond {
@@ -333,5 +347,15 @@ span {
     }
     .text-center {
         width: fit-content;
+    }
+
+    .boxil2 {
+        border-start-end-radius: 120px;
+    }
+
+    .butns {
+        width: 109px;
+        padding: 8px;
+        height: 36px;
     }
 }
