--- a/Micro.css
+++ b/Micro.css
@@ -37,7 +37,7 @@ body {
     flex-direction: column;
     border-end-start-radius: 150px;
     height: 100vh;
-    width: 70%;
+    width: 80%;
     padding: 20px;
 }
 
@@ -57,7 +57,6 @@ body {
     border-end-start-radius: 150px;
 }
 
-
 .open h1 {
     text-align: left;
     color: #091E42;
@@ -66,7 +65,32 @@ body {
 .open h6 {
     text-align: left;
     font-size: 20px;
-    color: 344563;
+    color: #344563;
+}
+
+.opens {
+    background: url( /Img/header-shapes\ mobile.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    border-end-start-radius: 80px;
+}
+
+.opens h1{
+    text-align: left;
+    color: #091E42;
+    font-size: 24px;
+    width: 99%;
+}
+
+.opens h6 {
+    text-align: left;
+    font-size: 13pxpx;
+    color: #344563;
 }
 
 .content {
@@ -291,6 +315,12 @@ span {
         color: white !important;
     }
 
+    .content {
+        height: auto;
+        padding: -50px;
+        border-end-start-radius: 90px;
+    }
+
     .boxi{
         flex-wrap: wrap;
     }
@@ -309,9 +339,11 @@ span {
     .noDisplay {
         display: none;
     }
+
     .box{
         display: none;
     }
+
     .d-flex {
         display: flex;
         flex-direction: row;
