--- a/Micro.css
+++ b/Micro.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 body {
     font-family: 'poppins', sans-serif;
-    background-color: #E5E5E5;
+    background-color: #ffffff;
     box-sizing: border-box;
     width: 100%;
 }
@@ -16,12 +16,35 @@ body {
     box-shadow: none;
 }
 
-.bx-menu {
-    font-size: 2rem;
+.content {
+    border-end-start-radius: 150px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3)
 }
 
-.bx-x {
-    font-size: 2rem;
+.containers {
+    background-image: url(./Img/Header\ bg@2x.png);
+    width: 98%;
+    height: 110vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.contents {
+    width: 65%;
+}
+
+.contents h1 {
+    font-size: 58px;
+    display: flex;
+    flex-direction: column;
+    color: #091E42;
+}
+
+.contents p {
+    font-size: 19px;
 }
 
 #img {
@@ -30,76 +53,9 @@ body {
     top: 30px;
 }
 
-.open2 {
-    display: flex;
-    align-items: right;
-    justify-content: center;
-    flex-direction: column;
-    border-end-start-radius: 150px;
-    height: 100vh;
-    width: 80%;
-    padding: 20px;
-}
-
-.Alexa {
-    width: 100%;
-}
-
-.open {
-    background: url( /Img/Header\ bg@2x.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    border-end-start-radius: 150px;
-}
-
-.open h1 {
-    text-align: left;
-    color: #091E42;
-}
-
-.open h6 {
-    text-align: left;
-    font-size: 20px;
-    color: #344563;
-}
-
-.opens {
-    background: url( /Img/header-shapes\ mobile.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    border-end-start-radius: 80px;
-}
-
-.opens h1{
-    text-align: left;
-    color: #091E42;
-    font-size: 24px;
-    width: 99%;
-}
-
-.opens h6 {
-    text-align: left;
-    font-size: 13pxpx;
-    color: #344563;
-}
-
-.content {
-    border-end-start-radius: 120px;
-    background-color: #ffffff;
-}
-
-.contentb{
-    height: auto;
+.social-icons {
+    font-size: 40px;
+    gap: 5px;
 }
 
 .boxi {
@@ -110,6 +66,7 @@ body {
     text-align: left;
     height: auto;
     margin-top: 100px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
 .bxs-circle {
@@ -123,6 +80,7 @@ body {
     margin-top: 35px;
     gap: 90px;
 }
+
 .cond {
     gap: 20px;
     background-color: #EBEBFF;
@@ -176,6 +134,7 @@ body {
 span {
     gap: 50px;
 }
+
 .cont {
     gap: 20px;
     background-color: #EBEBFF;
@@ -196,7 +155,7 @@ span {
     width: 100%;
 }
 
-.box3{
+.box3 {
     padding: 15px;
     display: flex;
     flex-direction: row;
@@ -239,21 +198,46 @@ span {
     justify-content: center;
     text-align: left;
     height: auto;
-    margin-top: 100px;
     gap: 10px;
-    padding: 20px;
+    padding: 50px;
 }
 
 .boxil2 {
     border-start-end-radius: 180px;
+    box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.3);
+    height: auto;
+    padding: 20px;
+    margin-top: 100px;
 }
 
+.accordion-button {
+    background-color: white !important;
+    outline: none;
+    box-shadow: 0 0 0 2px rgb(251, 252, 253) !important;
+}
+
+.accordion {
+    border: none !important;
+}
 
 .flates {
-    width: 80%;
-    height: 120px;
     background-color: #F7F7F9;
+    padding: 8px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
 
+}
+
+.victor {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .bg {
@@ -272,7 +256,7 @@ span {
     justify-content: center;
     align-items: center;
     background-color: #4e60fd;
-    margin-top: 40px;
+    margin-top: 10px;
     border-start-start-radius: 120px;
 }
 
@@ -291,7 +275,7 @@ span {
 
 .wraps {
     width: 100%;
-    margin-top: -65px;
+    margin-top: -20px;
 }
 
 .mobile {
@@ -300,7 +284,7 @@ span {
 
 @media (max-width: 768px) {
     .offcanvas {
-        background-color:  #4a5bf896;
+        background-color: #4a5bf896;
         backdrop-filter: blur(5px);
     }
 
@@ -321,7 +305,13 @@ span {
         border-end-start-radius: 90px;
     }
 
-    .boxi{
+    .Alexa {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .boxi {
         flex-wrap: wrap;
     }
 
@@ -336,11 +326,12 @@ span {
         flex-direction: row;
         flex-wrap: nowrap;
     }
+
     .noDisplay {
         display: none;
     }
 
-    .box{
+    .box {
         display: none;
     }
 
@@ -349,6 +340,7 @@ span {
         flex-direction: row;
         flex-wrap: wrap;
     }
+
     .yesDisplay {
         display: block;
     }
@@ -359,6 +351,7 @@ span {
         flex-wrap: nowrap;
         width: auto;
     }
+
     .box3 {
         display: flex;
         flex-direction: row;
@@ -368,15 +361,17 @@ span {
         display: flex;
         flex-direction: column;
     }
-    
+
     .bx-chevron-down {
         margin-left: 10.8vh;
         font-size: 25px;
         padding-left: 22px;
     }
+
     .open2 {
         width: 100vh;
     }
+
     .text-center {
         width: fit-content;
     }
@@ -389,5 +384,27 @@ span {
         width: 109px;
         padding: 8px;
         height: 36px;
+    }
+
+    .victor {
+        flex-wrap: wrap;
+    }
+
+    .contents {
+        width: 80%;
+    }
+
+    .containers {
+        display: none;
+    }
+
+    .mobilevw {
+        background-image: url(./Img/header-shapes\ mobile.png);
+        width: 98%;
+        height: 120vh;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
