--- a/Micro.css
+++ b/Micro.css
@@ -92,10 +92,11 @@ body {
 .wrapper {
     display: inline-flex;
     margin-bottom: 17px;
+    background-color: transparent;
 }
 
 .wrapper .static-text {
-    font-size: 45px;
+    font-size: 41px;
     font-weight: 600;
     font-family: "IM Fell Dw ", serif;
     color: darkslategrey;
@@ -104,7 +105,7 @@ body {
 
 .wrapper .dynamic-text {
     margin-left: 15px;
-    margin-top: 18px;
+    margin-top: 15px;
     height: 38px;
     overflow: hidden;
     gap: 30px;
@@ -114,7 +115,7 @@ body {
     list-style: none;
     font-size: 26px;
     font-weight: 500;
-    color: rgb(62, 131, 187);
+    color: #000;
     position: relative;
     top: 0;
     animation: slide 10s steps(2) infinite;  
