--- a/Micro.css
+++ b/Micro.css
@@ -24,6 +24,10 @@ body {
     box-shadow: none;
 }
 
+nav {
+   height: 71px;  
+}
+
 .content {
     border-end-start-radius: 150px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3)
