--- a/Micro.css
+++ b/Micro.css
@@ -294,13 +294,13 @@ span {
 }
 
 .flates {
-    background-color: #F7F7F9;
+    background-color: transparent;
     padding: 8px;
     width: 90%;
     display: flex;
     justify-content: center;
     align-items: start;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 
 }
@@ -308,7 +308,7 @@ span {
 .victor {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
 }
