--- a/Micro.css
+++ b/Micro.css
@@ -411,10 +411,11 @@ span {
     display: inline;
     float: left;
     margin: 0;
-    height: 28px;
+    height: 25px;
     font-family: "Lato", sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
+    font-size: 52px !important;
 }
 
 .scroll-content-container-list {
@@ -429,18 +430,20 @@ span {
 
 .scroll-content-container-list-item {
     height: 62px;
-    line-height: 38px;
-    padding-left: 19px;
+    line-height: 26px;
+    padding-left: 18px;
     padding-top: 21px;
     font-family: "Lato", sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
+    color: #206cdf;
 }
 
-/* Keyframes for discrete switching between items */
+
+
 @keyframes change {
 
-    /* Show the first item */
+  
     0%,
     40% {
         transform: translateY(0);
@@ -470,56 +473,24 @@ span {
 .portfolio-wrapper {
   display: flex;
   justify-content: start;
-  align-items: center;
-  padding: 60px 0;
+  align-items: center; 
+  padding: 20px;
 }
 
-
-.moving-shadow-ring {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  position: relative;
-  animation: rotateShadow 5s linear infinite;
-  transition: box-shadow 0.8s ease, transform 0.6s ease;
+.portfolio-img{
+    height: 270px;
+    width: 270px;
+    border-radius: 50%;
 }
 
-.portfolio-img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 3px solid white;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+.img-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
-
-
-.moving-shadow-ring:hover {
-  box-shadow: 0 0 40px 10px rgba(100, 100, 255, 0.7); /* bluish glow */
-  transform: scale(1.03); 
-}
-
-/* Rotating shadow animation */
-@keyframes rotateShadow {
-  0% {
-    box-shadow: 10px 0 20px rgba(0, 0, 0, 0.4);
-  }
-  25% {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-  }
-  50% {
-    box-shadow: -10px 0 20px rgba(0, 0, 0, 0.4);
-  }
-  75% {
-    box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.4);
-  }
-  100% {
-    box-shadow: 10px 0 20px rgba(0, 0, 0, 0.4);
-  }
-}
-
-
-
 
 
 
