--- a/Micro.css
+++ b/Micro.css
@@ -107,7 +107,8 @@ nav {
 .sect {
     width: 100%;
     margin-top: 35px;
-    gap: 90px;
+    display: flex;
+    gap: 10px;
 }
 
 .wrapper {
@@ -214,6 +215,13 @@ span {
 .yesDisplay {
     display: none;
     width: 100%;
+}
+
+.cond{
+    background-color: #EBEBFF;
+    color: #6070FF;
+    padding: 8px;
+    border-radius: 5px;
 }
 
 .box3 {
